added generate link and review section

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -9,6 +9,11 @@
     <div>
       <label for="post-url">Link</label>
       <input id="post-url" name="post-url" />
+      <button type="submit" class="btn">Generate Link</button>
+    </div>
+    <div>
+      <label for="post-url">Review</label>
+      <input id="post-url" name="post-url" />
     </div>
     <button type="submit" class="btn">Create</button>
   </form>
