bad field error debugging

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -15,6 +15,10 @@
       <label for="post-url">Review</label>
       <input id="post-url" name="post-url" />
     </div>
+    <div>
+      <label for="post-review">Review</label>
+      <input id="post-review" name="post-review"/>
+    </div>
     <button type="submit" class="btn">Create</button>
   </form>
 </section>
