--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,16 +4,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Just Tech News</title>
+  <title>Screen Meanie</title>
+  <link rel="shortcut icon" href="../layouts/favicon-movie.jfif" />
   <link rel="stylesheet" href="/stylesheets/style.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 </head>
 
 <body>
+  
   <div class="wrapper">
     <header>
       <h1>
-        <a href="/">Just Tech News</a>
+        <a href="/">Screen Meanie</a>
       </h1>
       <nav>
         {{#if loggedIn}}
@@ -25,17 +26,19 @@
       </nav>
     </header>
     <main>
+    
       {{{ body }}}
+      
     </main>
-    <footer>
+  
+  <footer class="dash-post">
       Thanks for visiting!
     </footer>
-  </div>
+
   
   {{#if loggedIn}}
   <script src="/javascript/logout.js"></script>
   {{/if}}
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 </body>
 
 </html>
