alter default value review column

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -11,10 +11,10 @@
       <input id="post-url" name="post-url" />
       <button type="submit" class="btn">Generate Link</button>
     </div>
-    <div>
+    {{!-- <div>
       <label for="post-url">Review</label>
       <input id="post-url" name="post-url" />
-    </div>
+    </div> --}}
     <div>
       <label for="post-review">Review</label>
       <input id="post-review" name="post-review"/>
