--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -5,21 +5,17 @@
     <div>
       <label for="post-title">Title</label>
       <input type="text" id="post-title" name="post-title" />
+      <button id="movie-lookup-btn">Generate Link</button>
     </div>
     <div>
       <label for="post-url">Link</label>
-      <input id="post-url" name="post-url" />
-      <button type="submit" class="btn">Generate Link</button>
-    </div>
-    <div>
-      <label for="post-url">Review</label>
       <input id="post-url" name="post-url" />
     </div>
     <div>
       <label for="post-review">Review</label>
       <input id="post-review" name="post-review"/>
     </div>
-    <button type="submit" class="btn">Create</button>
+    <button type="submit" id="create-post-btn" class="btn">Create</button>
   </form>
 </section>
 
@@ -38,3 +34,4 @@
 {{/if}}
 
 <script src="/javascript/add-post.js"></script>
+<script src="/javascript/movie-search.js"></script>
