--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,7 +11,6 @@
 
 <body>
   
-  <div class="wrapper">
     <header>
       <h1>
         <a href="/">Screen Meanie</a>
@@ -32,8 +31,8 @@
     </main>
   
   <footer class="dash-post">
-      Thanks for visiting!
-    </footer>
+      <span style='font-size:100px;'>&#128127;</span>
+  </footer>
 
   
   {{#if loggedIn}}
