--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -1,6 +1,3 @@
-{{> post-info post}}
-
-{{#if loggedIn}}
 <form class="comment-form">
   <div>
     <textarea name="comment-body"></textarea>
@@ -11,11 +8,19 @@
     <button type="button" class="upvote-btn">upvote</button>
   </div>
 </form>
-{{/if}}
 
-{{> comments post.comments}}
+<div class="comments">
+  {{#each post.comments}}
+  <section class="comment">
+    <div class="meta">
+      {{user.username}} on {{created_at}}
+    </div>
+    <div class="text">
+      {{comment_text}}
+    </div>
+  </section>
+  {{/each}}
+</div>
 
-{{#if loggedIn}}
 <script src="/javascript/comment.js"></script>
 <script src="/javascript/upvote.js"></script>
-{{/if}}
