--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,7 +7,7 @@ body, html {
   padding: 0;
   margin: 0;
   font-family: sans-serif;
-  color: rgb(197, 197, 197);
+  /* color: rgb(197, 197, 197); */
   background-color: #333;
 }
 
