--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -8,4 +8,8 @@
     |
     <a href="/post/{{id}}">{{comments.length}} {{format_plural "comment" comments.length}}</a>
   </div>
+  <div>
+    <h1>User Review -</h1>
+    <h3>{{review}}</h3>
+  </div>
 </article>
