--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -1,5 +1,10 @@
 {{> post-info post}}
 
+<div>
+    <h1>User Review -</h1>
+    <h3>{{post.review}}</h3>
+  </div>
+
 {{#if loggedIn}}
 <form class="comment-form">
   <div>
