--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -22,6 +22,11 @@ a:hover {
   color: #92c2fc;
 }
 
+h1 {
+  text-align: center;
+  text-decoration: underline;
+}
+
 .mask-custom {
   backdrop-filter: blur(3px);
   background-color: rgba(0, 0, 0, 0.3);
