--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -22,10 +22,7 @@ a:hover {
   color: #92c2fc;
 }
 
-h1 {
-  text-align: center;
-  text-decoration: underline;
-}
+
 
 .mask-custom {
   backdrop-filter: blur(3px);
@@ -188,6 +185,22 @@ main {
 .edit-post-form {
   margin-bottom: 5%;
 }
+
+#review-div {
+  border: 1px solid #cacaca;
+  border-radius: 1rem;
+}
+
+#review-title {
+  text-align: center;
+  text-decoration: underline;
+}
+
+#review-text {
+  text-align: center;
+  margin-bottom: 5rem;
+}
+
 
 footer {
   border-top: 1px solid rgb(153, 0, 0);
